# simplysalt.io

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
contributing/: index.html
license/: index.html
overrides/: main.html
search/: search_index.json
