[tool.poetry]
name = "simplysalt.io"
version = "0.1.0"
description = ""
authors = ["Alexander Rymdeko-Harvey <a.rymdekoharvey@obscuritylabs.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.1.5"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-redirects = "^1.0.3"
mkdocs-git-revision-date-plugin = "^0.3.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
